--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node backend/server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2"
   }
 }
